--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura</title>
+    <title>Lista de Cursos da Alura</title>
 </head>
 
 <body>
