--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible é bom demais</li>
+        <li>Ansible: o curso para ansiosos?</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
         <li>Kubernetes</li>
     </ul>
