--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible: o curso para ansiosos?</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes: Introdução a orquestração de containeres</li>
     </ul>
 
 </body>
